# robodog

./: cv_robot.ipynb
EDTH-ros2-starterpack/: .gitignore  README.md
EDTH-ros2-starterpack/src/HesaiLidar_ROS_2.0/config/: config.yaml
EDTH-ros2-starterpack/src/go2_bringup/: CMakeLists.txt  package.xml
EDTH-ros2-starterpack/src/go2_bringup/launch/: full_bringup.launch.py  go2_control.launch.py  sensors.launch.py
EDTH-ros2-starterpack/src/go2_control/: CMakeLists.txt  package.xml
EDTH-ros2-starterpack/src/go2_control/include/common/: patch.hpp  sport_client.hpp  time_tools.hpp
EDTH-ros2-starterpack/src/go2_control/src/: go2_control_node.cpp
EDTH-ros2-starterpack/src/go2_control/src/common/: sport_client.cpp
EDTH-ros2-starterpack/src/go2_examples/: CMakeLists.txt  package.xml
EDTH-ros2-starterpack/src/go2_examples/go2_examples/: __init__.py
EDTH-ros2-starterpack/src/go2_examples/scripts/: keyboard_teleop.py
EDTH-ros2-starterpack/src/go2_interfaces/: CMakeLists.txt  package.xml
EDTH-ros2-starterpack/src/go2_interfaces/go2_interfaces/: __init__.py  go2_sdk.py
EDTH-ros2-starterpack/src/go2_interfaces/scripts/: go2_odometry.py  go2_state_publisher.py  go2_velocity_controller.py
EDTH-ros2-starterpack/src/go2_nav/launch/: navigation.launch.foxy.py  slam.launch.py
EDTH-ros2-starterpack/src/go2_nav/params/: go2_nav_params_foxy.yaml
EDTH-ros2-starterpack/src/unitree_go/: CMakeLists.txt  package.xml
gui_robot/: db.sqlite3  index.html  manage.py
gui_robot/data_sel/: apps.py  forms.py  models.py  urls.py  views.py
gui_robot/data_sel/migrations/: 0001_initial.py  0002_alter_photo_image.py
gui_robot/data_sel/templates/data_sel/: select_images.html  selected_images.html  upload_photo.html  waiting_for_folder.html
gui_robot/gui_robot/: asgi.py  settings.py  urls.py  wsgi.py
